@@ -1,6 +1,12 @@
 Summary of important user-visible changes for version 4.0:
 ---------------------------------------------------------
 
+ ** The preference
+
+      do_braindead_shortcircuit_evaluation
+
+    is now enabled by default.
+
  ** Other new functions added in 4.0.0:
 
     validateattributes
@@ -20,7 +26,7 @@ Summary of important user-visible changes for version 4.0:
     be removed from Octave 4.4 (or whatever version is the second major
     release after 4.0):
 
-    *none*
+      do_braindead_shortcircuit_evaluation
 
 ---------------------------------------------------------
 
